# Chromium_Clang

./: README.md  args.gn  ffmpeg.patch  linux-avx2-hybrid.patch  linux64-avx.patch  linux64-avx2.patch  v8.patch  vulkan-validation-layers.patch  win64-avx.patch  win64-avx2.patch  win64avx.patch  win64avx2.patch
FFmpeg/: README.md  ffmpeg.patch  hdr10-metadata-chromium-114.patch
LLVM/: README.md  llvm.patch
Linux/: README.md  args.gn  build.args  linux64-avx.patch  linux64-avx2.patch  linux64-avx512.patch  linux64-znver2.patch
V8/: README.md  v8.patch
Windows/: README.md  args.gn  build.args  v8.patch  win64-avx.patch  win64-avx2.patch  win64-avx512.patch
Windows/vv8/: v8.patch
v8/: README.md
